# win_video_devices

./: CMakeLists.txt  README.md  setup.py
src/: devices.cpp
